--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="PercentageCalculators">Percentage Calculators</h1>
+      <h1 class="PercentageCalculators">Percentage Calculator</h1>
       <p>X is what % of Y?</p>
       <form id="xIsWhatPercentageOfY">
         <input type="text" class="numField1" id="numField1" />
